...
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="@dimen/default_bottom_margin_prounciation_activity"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/prounceHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_bottom_margin_prounciation_activity"
            android:contentDescription="@string/chinese_prounciation_guide_header"
            android:text="@string/chinese_prounciation_guide_header"
            android:textIsSelectable="true"
...
